Search画面でTuning のテーブルを作成中
テーブルの表示は出来たので、次はTuneCollector に Tuning 一覧を作成する

--- a/iKota/Base.lproj/Main.storyboard
+++ b/iKota/Base.lproj/Main.storyboard
@@ -43,8 +43,8 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PvP-SE-RS3" id="y5k-rN-JE5">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TDL-90-dcR">
-                                                    <rect key="frame" x="14" y="6" width="50" height="50"/>
+                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TDL-90-dcR">
+                                                    <rect key="frame" x="14" y="2" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="Ea9-vo-pMp"/>
                                                         <constraint firstAttribute="width" constant="50" id="hTP-NT-Gt0"/>
@@ -319,14 +319,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pKA-0r-6Rg">
-                                <rect key="frame" x="7" y="68" width="582" height="29"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pKA-0r-6Rg">
+                                <rect key="frame" x="6" y="68" width="588" height="29"/>
                                 <segments>
                                     <segment title="Album"/>
                                     <segment title="Tuning"/>
                                     <segment title="History"/>
                                     <segment title="Count"/>
                                 </segments>
+                                <connections>
+                                    <action selector="onClickSearchMode:" destination="MUr-xG-r11" eventType="valueChanged" id="wPb-C0-C3I"/>
+                                </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="69" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4ye-jN-FbZ">
                                 <rect key="frame" x="0.0" y="100" width="600" height="500"/>
@@ -366,6 +369,34 @@
                                             </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="tuning" rowHeight="41" id="hKU-LK-m32">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hKU-LK-m32" id="A3U-1I-pJD">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OYc-LM-eS7">
+                                                    <rect key="frame" x="8" y="12" width="584" height="16"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="OYc-LM-eS7" secondAttribute="trailing" id="5j9-a6-tWB"/>
+                                                <constraint firstAttribute="centerY" secondItem="OYc-LM-eS7" secondAttribute="centerY" id="PA7-cs-a9p"/>
+                                                <constraint firstAttribute="centerX" secondItem="OYc-LM-eS7" secondAttribute="centerX" id="QKb-MQ-1jl"/>
+                                                <constraint firstItem="OYc-LM-eS7" firstAttribute="leading" secondItem="A3U-1I-pJD" secondAttribute="leadingMargin" id="UEf-QE-fFj"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="OYc-LM-eS7" secondAttribute="bottom" constant="4" id="ifW-eG-9r6"/>
+                                                <constraint firstItem="OYc-LM-eS7" firstAttribute="top" secondItem="A3U-1I-pJD" secondAttribute="topMargin" constant="4" id="uT3-ut-DIn"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="QKb-MQ-1jl"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -397,7 +428,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4AK-1b-ZTk" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="8Hv-0V-fyv" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="685" y="1167"/>
+            <point key="canvasLocation" x="685" y="1163"/>
         </scene>
         <!--Youtube-->
         <scene sceneID="W3D-sj-BaI">
